# hw2_14

./: .env  README.md  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
hw2_11/: schemas.py
hw2_11/conf/: config.py
hw2_11/db/: db.py  models.py
hw2_11/repository/: contacts.py  users.py
hw2_11/routes/: auth.py  contacts.py  users.py
hw2_11/services/: auth.py  email.py
migrations/: env.py
migrations/versions/: 320ec2356e76_2.py  4c5659d1eb18_init.py  8877d47be8f0_2.py  d624c55cbf2e_usermodel.py  eff92c05796c_2.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16390  16393  16395  16397  16403  16404  16406  16408  16410  16412  16416  16418  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  (+4 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
tests/: conftest.py  test_unit_repository_contacts.py  test_unit_repository_users.py  test_unit_route_auth.py
